--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Can you make this promise to Sadhguru?</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>Try not to Cringe: TikToks</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -893,7 +893,7 @@
                     <div class="video-info">
                         <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1146,7 +1146,7 @@
                     <div class="video-info">
                         <h3>Try Not to Laugh: Pranks that are Actually Good 4</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2668,7 +2668,7 @@
                     <div class="video-info">
                         <h3>The problem with self-help gurus</h3>
                         <div class="channel">Matt D'Avella</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 28, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Can you make this promise to Sadhguru?</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8916,7 +8916,7 @@
                         <div class="video-info">
                             <h3>The problem with self-help gurus</h3>
                             <div class="channel">Matt D'Avella</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 28, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Try not to Cringe: TikToks</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10507,7 +10507,7 @@
                         <div class="video-info">
                             <h3>HOW WELL DO THE SIDEMEN KNOW EACH OTHER?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10628,7 +10628,7 @@
                         <div class="video-info">
                             <h3>Try Not to Laugh: Pranks that are Actually Good 4</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
